# SarahNode

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md
.github/workflows/: security-ci.yml
backend/: .env.example  requirements.txt  run_server.py
backend/app/: main.py
backend/app/config/: persona.json  settings.py
backend/app/core/: container.py  logging.py
backend/app/data/: identity_memory.json
backend/app/memory/: state_manager.py
backend/app/orchestration/: stream_orchestrator.py
backend/app/routers/: control.py  health.py
backend/app/safety/: moderation.py  response_policy.py
backend/app/schemas/: chat.py  events.py  identity.py
backend/app/services/: capability_router.py  chat_ingestion.py  content_extractor.py  dialogue_engine.py  identity_service.py  page_fetcher.py  voice_service.py  web_answer_synthesizer.py  web_browsing_policy.py  web_search_service.py
backend/app/tests/: test_capability_router.py  test_control_routes.py  test_moderation.py  test_web_browsing_policy.py
docs/: ai-assistant-roadmap.md  codebase-audit.md  current-state-audit-2026-03-20.md  manual-smoke-checklist.md  security-audit-report.md  security-hardening.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: .gitignore
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: EventLog.tsx  SettingsPanel.tsx  StatusCards.tsx  WebAnswerTextbox.tsx
(+58 files in other folders)
